--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,32 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello_world">Hello World!</string>
 
     <string name="app_name">Sunshine</string>
 
+    <string name="action_settings">Settings</string>
+
+    <!-- Preference Labels, Keys and Values -->
+    <!-- Label for location preference [CHAR LIMIT=30] -->
+    <string name="pref_location_label">Location</string>
+
+    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
+    <string name="pref_location_key" translatable="false">location</string>
+
+    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
+    <string name="pref_location_default" translatable="false">94034</string>
+
+    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
+    <string name="pref_units_label">Temperature Units</string>
+
+    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
+    <string name="pref_units_label_metric">Metric</string>
+
     <!-- Menu Option Labels -->
     <string name="action_refresh" translatable="false">Refresh!</string>
-    <string name="action_settings">Settings</string>
+
+    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
+    <string name="pref_units_label_imperial">Imperial</string>
+
+    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
+    <string name="pref_units_key" translatable="false">units</string>
+
+    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
+    <string name="pref_units_metric" translatable="false">metric</string>
+
+    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
+    <string name="pref_units_imperial" translatable="false">imperial</string>
 
     <!-- Activity labels -->
     <string name="title_activity_detail">Details</string>
 
-    <!-- Preference Labels, Keys and Values -->
-    <string name="pref_location_label">Location</string>
-    <string name="pref_location_key" translatable="false">location</string>
-    <string name="pref_location_value" translatable="false">90210</string>
-    <string name="pref_location_default" translatable="false">94034</string>
 
-    <string name="pref_units_label">Units</string>
-    <string name="pref_units_key" translatable="false">units</string>
-    <string name="pref_units_heading_instruction">Choose temperature units …</string>
-    <string-array name="pref_units_list_titles">
-        <item>Celsius °C</item>
-        <item>Fahrenheit °F</item>
+
+
+    <string-array name="pref_units_values">
+        <item>@string/pref_units_metric</item>
+        <item>@string/pref_units_imperial</item>
     </string-array>
-    <string-array name="pref_units_list_values">
-        <item>1</item>
-        <item>0</item>
+
+    <string-array name="pref_units_options">
+        <item>@string/pref_units_label_metric</item>
+        <item>@string/pref_units_label_imperial</item>
     </string-array>
 
 
