--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="action_refresh" translatable="false">Refresh!</string>
     <string name="action_show_map">Show Map</string>
     <string name="action_settings">Settings</string>
+    <string name="action_share">Share</string>
 
 
     <!-- Activity labels -->
